# DeepSense

./: README.md
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/com/lanytek/deepsensev3/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: deepsense.cl
app/src/main/cpp/: basic_functions.cpp  classifier.cpp  clio.cpp  deepsense.cpp  deepsense_lib.cpp  utilities.cpp
app/src/main/cpp/include/: basic_functions.hpp  classifier.hpp  clio.hpp  deepsense_internal_lib.hpp  deepsense_lib.hpp  predefine.hpp  utilities.hpp
app/src/main/cpp/include/layers/: conv_layer.hpp  fully_connected.hpp  lrn.hpp  maxpool.hpp  softmax.hpp
app/src/main/cpp/layers/: conv_layer.cpp  fully_connected.cpp  lrn.cpp  maxpool.cpp  softmax.cpp
app/src/main/java/com/lanytek/deepsensev3/: MainActivity.java  Utilities.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/lanytek/deepsensev3/: ExampleUnitTest.java
